--- a/app/styles/theme.css
+++ b/app/styles/theme.css
@@ -1,6 +1,6 @@
 :root {
-  --oui-font-family: 'Manrope', sans-serif;
-  --oui-font-size-base: 16px;
+  --oui-font-family: 'Raleway', sans-serif;
+  --oui-font-size-base: 18px;
 
   /* colors */
   --oui-color-primary: 221 184 255;
@@ -95,6 +95,6 @@
 }
 
 html, body {
-  font-family: 'Manrope', sans-serif !important;
-  font-size: 16px !important;
+  font-family: 'Raleway', sans-serif !important;
+  font-size: 18px !important;
 }
