--- a/app/styles/theme.css
+++ b/app/styles/theme.css
@@ -1,100 +1,100 @@
 :root {
   --oui-font-family: 'Manrope', sans-serif;
-  --oui-font-size-base: 18px;
+  --oui-font-size-base: 16px;
 
   /* colors */
-  --oui-color-primary: 221 184 255;
-  --oui-color-primary-light: 240 221 255;
-  --oui-color-primary-darken: 192 132 252;
-  --oui-color-primary-contrast: 0 0 0;
+  --oui-color-primary: 176 132 233;
+  --oui-color-primary-light: 213 190 244;
+  --oui-color-primary-darken: 137 76 209;
+  --oui-color-primary-contrast: 255 255 255;
 
-  --oui-color-link: 221 184 255;
-  --oui-color-link-light: 240 221 255;
+  --oui-color-link: 189 107 237;
+  --oui-color-link-light: 217 152 250;
 
   --oui-color-secondary: 255 255 255;
-  --oui-color-tertiary: 209 213 219;
-  --oui-color-quaternary: 156 163 175;
+  --oui-color-tertiary: 218 218 218;
+  --oui-color-quaternary: 218 218 218;
 
-  --oui-color-danger: 248 113 113;
-  --oui-color-danger-light: 252 165 165;
-  --oui-color-danger-darken: 220 38 38;
+  --oui-color-danger: 245 97 139;
+  --oui-color-danger-light: 250 167 188;
+  --oui-color-danger-darken: 237 72 122;
   --oui-color-danger-contrast: 255 255 255;
 
-  --oui-color-success: 34 197 94;
-  --oui-color-success-light: 134 239 172;
-  --oui-color-success-darken: 22 163 74;
+  --oui-color-success: 41 233 169;
+  --oui-color-success-light: 101 240 194;
+  --oui-color-success-darken: 0 161 120;
   --oui-color-success-contrast: 255 255 255;
 
-  --oui-color-warning: 251 191 36;
-  --oui-color-warning-light: 253 224 71;
-  --oui-color-warning-darken: 245 158 11;
-  --oui-color-warning-contrast: 0 0 0;
+  --oui-color-warning: 255 209 70;
+  --oui-color-warning-light: 255 229 133;
+  --oui-color-warning-darken: 255 152 0;
+  --oui-color-warning-contrast: 255 255 255;
 
-  --oui-color-fill: 55 65 81;
-  --oui-color-fill-active: 75 85 99;
+  --oui-color-fill: 36 32 47;
+  --oui-color-fill-active: 40 46 58;
 
-  --oui-color-base-1: 229 231 235;
-  --oui-color-base-2: 209 213 219;
-  --oui-color-base-3: 190 193 199;
-  --oui-color-base-4: 156 163 175;
-  --oui-color-base-5: 107 114 128;
-  --oui-color-base-6: 75 85 99;
-  --oui-color-base-7: 55 65 81;
-  --oui-color-base-8: 31 41 55;
-  --oui-color-base-9: 17 24 39;
-  --oui-color-base-10: 3 7 18;
+  --oui-color-base-1: 93 83 123;
+  --oui-color-base-2: 81 72 107;
+  --oui-color-base-3: 68 61 69;
+  --oui-color-base-4: 57 52 74;
+  --oui-color-base-5: 51 46 66;
+  --oui-color-base-6: 43 38 56;
+  --oui-color-base-7: 36 32 47;
+  --oui-color-base-8: 29 26 38;
+  --oui-color-base-9: 22 20 28;
+  --oui-color-base-10: 14 13 18;
 
-  --oui-color-base-foreground: 248 250 252;
-  --oui-color-line: 148 163 184;
+  --oui-color-base-foreground: 255 255 255;
+  --oui-color-line: 255 255 255;
 
-  --oui-color-trading-loss: 248 113 113;
+  --oui-color-trading-loss: 245 97 139;
   --oui-color-trading-loss-contrast: 255 255 255;
-  --oui-color-trading-profit: 34 197 94;
+  --oui-color-trading-profit: 41 233 169;
   --oui-color-trading-profit-contrast: 255 255 255;
 
   /* gradients */
-  --oui-gradient-primary-start: 192 132 252;
-  --oui-gradient-primary-end: 221 184 255;
+  --oui-gradient-primary-start: 40 0 97;
+  --oui-gradient-primary-end: 189 107 237;
 
-  --oui-gradient-secondary-start: 107 114 128;
-  --oui-gradient-secondary-end: 156 163 175;
+  --oui-gradient-secondary-start: 81 42 121;
+  --oui-gradient-secondary-end: 176 132 233;
 
-  --oui-gradient-success-start: 22 163 74;
-  --oui-gradient-success-end: 134 239 172;
+  --oui-gradient-success-start: 1 83 68;
+  --oui-gradient-success-end: 41 223 169;
 
-  --oui-gradient-danger-start: 220 38 38;
-  --oui-gradient-danger-end: 252 165 165;
+  --oui-gradient-danger-start: 153 24 76;
+  --oui-gradient-danger-end: 245 97 139;
 
-  --oui-gradient-brand-start: 229 231 235;
-  --oui-gradient-brand-end: 221 184 255;
+  --oui-gradient-brand-start: 231 219 249;
+  --oui-gradient-brand-end: 159 107 225;
   --oui-gradient-brand-stop-start: 6.62%;
   --oui-gradient-brand-stop-end: 86.5%;
   --oui-gradient-brand-angle: 17.44deg;
 
-  --oui-gradient-warning-start: 245 158 11;
-  --oui-gradient-warning-end: 253 224 71;
+  --oui-gradient-warning-start: 152 58 8;
+  --oui-gradient-warning-end: 255 209 70;
 
-  --oui-gradient-neutral-start: 3 7 18;
-  --oui-gradient-neutral-end: 55 65 81;
+  --oui-gradient-neutral-start: 27 29 24;
+  --oui-gradient-neutral-end: 38 41 46;
 
   /* rounded */
-  --oui-rounded-sm: 4px;
-  --oui-rounded: 6px;
-  --oui-rounded-md: 8px;
-  --oui-rounded-lg: 10px;
+  --oui-rounded-sm: 2px;
+  --oui-rounded: 4px;
+  --oui-rounded-md: 6px;
+  --oui-rounded-lg: 8px;
   --oui-rounded-xl: 12px;
-  --oui-rounded-2xl: 14px;
+  --oui-rounded-2xl: 16px;
   --oui-rounded-full: 9999px;
 
   /* spacing */
-  --oui-spacing-xs: 4em;
-  --oui-spacing-sm: 8em;
-  --oui-spacing-md: 16em;
-  --oui-spacing-lg: 24;
-  --oui-spacing-xl: 32rem;
+  --oui-spacing-xs: 20rem;
+  --oui-spacing-sm: 22.5rem;
+  --oui-spacing-md: 26.25rem;
+  --oui-spacing-lg: 30rem;
+  --oui-spacing-xl: 33.75rem;
 }
 
 html, body {
   font-family: 'Manrope', sans-serif !important;
-  font-size: 18px !important;
+  font-size: 16px !important;
 }
