--- a/app/styles/theme.css
+++ b/app/styles/theme.css
@@ -1,5 +1,5 @@
 :root {
-  --oui-font-family: 'Tahoma', sans-serif;
+  --oui-font-family: 'Lucida Console', monospace;
   --oui-font-size-base: 16px;
 
   /* colors */
