--- a/app/styles/theme.css
+++ b/app/styles/theme.css
@@ -1,5 +1,5 @@
 :root {
-  --oui-font-family: 'Lucida Console', monospace;
+  --oui-font-family: 'Helvetica', san-serif;
   --oui-font-size-base: 16px;
 
   /* colors */
