--- a/app/styles/theme.css
+++ b/app/styles/theme.css
@@ -1,5 +1,5 @@
 :root {
-  --oui-font-family: 'Poppins', sans-serif;
+  --oui-font-family: 'Manrope', sans-serif;
   --oui-font-size-base: 16px;
 
   /* colors */
@@ -95,6 +95,6 @@
 }
 
 html, body {
-  font-family: 'Poppins', sans-serif !important;
+  font-family: 'Manrope', sans-serif !important;
   font-size: 16px !important;
 }
